ExpenseManager/force-app/main/default/objects/Expense_Report__c/Expense_Report__c.object-meta.xml
<CustomObject>
    <label>Expense Report</label>
    <pluralLabel>Expense Reports</pluralLabel>
    <nameField>
        <label>Report Number</label>
        <type>AutoNumber</type>
        <displayFormat>EXP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>