ExpenseManager/force-app/main/default/objects/Expense_Report__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Expense Reports</relationshipLabel>
    <relationshipName>Expense_Reports</relationshipName>
    <description>The employee the expense report belongs to.</description>
</CustomField>