ExpenseManager/force-app/main/default/objects/Expense_Report__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Text</type>
    <length>255</length>
    <description>What the expense report is for (e.g. "Client visit — Mumbai").</description>
</CustomField>