ExpenseManager/force-app/main/default/objects/Expense_Report__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Sum of all expense lines. Maintained by the ExpenseLine roll-up trigger.</description>
</CustomField>